# calisim

./: .buildinfo  .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  Dockerfile  README.md  SECURITY.md  docker-compose.devcontainer.yaml  docker-compose.yaml  genindex.html  index.html  mypy.ini  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js
.devcontainer/: devcontainer.json
_modules/: index.html
api_reference/: abc.html  base.html  bayesian.html  data_model.html  estimators.html  evolutionary.html  example_models.html  experimental_design.html  history_matching.html  index.html  optimisation.html  quadrature.html  reliability.html  sbi.html  sensitivity.html  statistics.html  surrogate.html  uncertainty.html  utils.html
binder/: Dockerfile
changelogs/: changelog.html
introduction/: index.html
pfr-internal-v0.1.0/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html
pfr-internal-v0.2.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
pfr-internal-v0.3.0/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html
pfr-internal-v0.4.0/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
pfr-internal-v0.5.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
pfr-internal-v02.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
scripts/: new_release.sh
tests/: conftest.py  test_config.py  test_discrepancies.py  test_dummy.py  test_estimators.py  test_example_models.py  test_optimisation.py  test_orchestration.py  test_scaffold.py  test_utils.py
v0.1.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.2.0/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
v0.2.1/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.2.2/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  (+2 more)
(+1194 files in other folders)
