[tool.poetry]
name = "calisim"
version = "0.1.0"
description = "A library of methods to calibrate simulation models."
authors = ["James Bristow <james.bristow@plantandfood.co.nz>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/PlantandFoodResearch/calisim"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
kaleido = "0.2.1"
scikit-learn = "^1.5.2"
numpy = "^2.1.2"
pandas = "^2.2.3"
networkx = "^3.4.1"
pillow = "^11.0.0"
scipy = "^1.14.1"
joblib = "^1.4.2"
sqlalchemy = "^2.0.36"
alembic = "^1.13.3"
celery = "^5.4.0"
graphviz = "^0.20.3"
pyyaml = "^6.0.2"
pydantic = "^2.9.2"
optuna = "^4.0.0"
psycopg2-binary = "^2.9.10"
arviz = "^0.20.0"
salib = "^1.5.1"
matplotlib = "^3.9.2"
pyabc = "^0.12.13"
iterative-ensemble-smoother = "^0.2.6"
pymc = "<=5.16.2"
pytensor = "<=2.20.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.28.0"
ipywidgets = "^8.1.5"
jupyter-core = "^5.7.2"
pytest = "^8.3.3"
coverage = "^7.6.3"
pre-commit = "^4.0.1"
sphinx-rtd-theme = "^3.0.1"
pytest-cov = "^5.0.0"
sphinx = "^8.1.3"
mypy = "^1.12.0"
sphinx-argparse = "^0.5.2"
sphinxcontrib-applehelp = "^2.0.0"
sphinxcontrib-devhelp = "^2.0.0"
sphinxcontrib-htmlhelp = "^2.1.0"
sphinxcontrib-jsmath = "^1.0.1"
sphinxcontrib-qthelp = "^2.0.0"
sphinxcontrib-serializinghtml = "^2.0.0"
pytest-mock = "^3.14.0"
pytest-xdist = "^3.6.1"
pytest-env = "^1.1.5"
types-pyyaml = "^6.0.12.20240917"
ruff = "^0.7.0"


[tool.poetry.group.torch.dependencies]
sbi = "<=0.22.0"
torch = "^2.5.0"
pyro-ppl = "^1.9.1"
pyro-api = "^0.1.2"
nflows = "^0.14"
tensorboard = "^2.18.0"
gpytorch = "^1.13"
botorch = "^0.12.0"
lampe = "^0.9.0"
zuko = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
indent-style = "tab"

[tool.ruff.lint]
extend-select = [
    "UP",
    "F",
    "E",
    "W",
    "I",
    "NPY",
    "RUF"
]

extend-ignore = [
    "W191"
]
